--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,15 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../lib/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../css/index.css">
+
 </head>
+
 <body>
     <script src="../lib/jquery/dist/jquery.min.js"></script>
-   <script src="../js/index.js"></script>
-   
+    <script src="../images/font_1663593_zfdrkv35vg/iconfont.js"></script>
+    <script src="../js/index.js">
+    </script>
+    <!--- topbar 顶部-->
+    <div id="topbar">
+        <div class="area-center">
+            <div class="areac-contain">
+                <div class="area-left">
+                    <ul class="list">
+                        <li>
+                            <a href="">商城首页</a>
+                        </li>
+                        <li class="list-logout">
+                            <a href="">登录</a>
+                            <i class="gap">|</i>
+                            <a href="">注册</a>
+                        </li>
+                        <li class="list-logoin">
+                            "Hi,"
+                            <span class="nickName">
+                                <a href=""></a>
+                            </span>
+                            <a class="logout" href="">[退出]</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="area-right">
+                    <ul class="list2">
+                        <li>
+                            <a href="">个人中心</a>
+                        </li>
+                        <li class="r-label">
+                            <span>
+                                合作渠道
+                                <svg class="icon zitb" aria-hidden="true">
+                                    <use xlink:href="#icon-jiantouxia"></use>
+                                </svg>
+                            </span>
+                            <div class="yc-menu">
+                                <div class="yc-menu-link">
+                                    <a href="">电视官网</a>
+                                </div>
+                                <div class="yc-menu-link">
+                                    <a href="">商家入驻</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="r-label">
+                            <span>
+                                <a href="">帮助中心
+                                    <svg class="icon zitb" aria-hidden="true">
+                                        <use xlink:href="#icon-jiantouxia"></use>
+                                    </svg>
+                                </a>
+                            </span>
+                            <div class="yc-menu">
+                                <div class="yc-menu-link">
+                                    <a href="">配送安装</a>
+                                </div>
+                                <div class="yc-menu-link">
+                                    <a href="">售后服务</a>
+                                </div>
+                                <div class="yc-menu-link">
+                                    <a href="">费用标准</a>
+                                </div>
+                                <div class="yc-menu-link">
+                                    <a href="">联系客服</a>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="r-label">
+                            <span>
+                                <a href="">
+                                    手机版
+                                    <svg class="icon zitb" aria-hidden="true">
+                                        <use xlink:href="#icon-jiantouxia"></use>
+                                    </svg>
+                                </a>
+                            </span>
+                            <div class=" list2 yc-menu ewm">
+                                <div class="code-ewm">
+                                    <img src="../images/indeximg/1.jfif" alt="" srcset="">
+                                    <span>扫码下载App</span>
+                                </div>
+
+                                <div class="code-ewm">
+                                    <img src="../images/indeximg/2.jfif" alt="" srcset="">
+                                    <span>扫码下载App</span>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+ </div>
+
+ <!---头部-->
+    <div class="header">
+        <div class="header-conte">
+            <div class="app-xz">
+                <span class="gb">x</span>
+                <div class="xz-name">App下载</div>
+                <div class="xz-tp">
+                    <img src="../images/indeximg/1.jfif" alt="">
+                </div>
+            </div>
+            <div class="shopp cart">
+                <a href="../pages/cart.html">
+                    <svg class="icon gwc" aria-hidden="true">
+                        <use xlink:href="#icon-gouwuche1  "></use>
+                    </svg>
+                </a>
+            </div>
+
+            <div class="header-logo">
+                <a href="">
+                    <img src="../images/indeximg/1.png" alt="" srcset="">
+                </a>
+            </div>
+
+            <div class="seach">
+                <div class="seach-wrap">
+                    <input type="text" name="" id="" class="s-seach-text">
+                    <button type="button" class="s-seach-btn">
+                        <i class="ss">搜</i>
+                        <i class="ss">索</i>
+                    </button>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
+<!---banner区域-->
+    <div class="banner">
+        
+    </div>
 </body>
+
 </html>
