还有一点点效果未实现

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1595,7 +1595,7 @@
                     <li>
                         <div class="product-pic">
                             <a href="">
-                                <img src="../images/indeximg/16.jpg" alt="">
+                                <img src="../images/indeximg/16-1.jpg" alt="">
                             </a>
                         </div>
                         <div class="product-type">
@@ -1645,7 +1645,7 @@
                     <li>
                         <div class="product-pic">
                             <a href="">
-                                <img src="../images/indeximg/16.jpg" alt="">
+                                <img src="../images/indeximg/16-1.jpg" alt="">
                             </a>
                         </div>
                         <div class="product-type">
@@ -1695,7 +1695,7 @@
                     <li>
                         <div class="product-pic">
                             <a href="">
-                                <img src="../images/indeximg/16.jpg" alt="">
+                                <img src="../images/indeximg/16-1.jpg" alt="">
                             </a>
                         </div>
                         <div class="product-type">
@@ -1720,7 +1720,7 @@
                     <li>
                         <div class="product-pic">
                             <a href="">
-                                <img src="../images/indeximg/16.jpg" alt="">
+                                <img src="../images/indeximg/16-1.jpg" alt="">
                             </a>
                         </div>
                         <div class="product-type">
@@ -1745,7 +1745,7 @@
                     <li>
                         <div class="product-pic">
                             <a href="">
-                                <img src="../images/indeximg/16.jpg" alt="">
+                                <img src="../images/indeximg/16-1.jpg" alt="">
                             </a>
                         </div>
                         <div class="product-type">
