--- a/src/pages/dist.html
+++ b/src/pages/dist.html
@@ -29,9 +29,9 @@
                             <a href="../pages/index.html">商城首页</a>
                         </li>
                         <li class="list-logout">
-                            <a href="">登录</a>
+                            <a href="../pages/login.html">登录</a>
                             <i class="gap">|</i>
-                            <a href="">注册</a>
+                            <a href="../pages/logon.html">注册</a>
                         </li>
                         <li class="list-logoin">
                             "Hi,"
