--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -28,9 +28,9 @@
                             <a href="">商城首页</a>
                         </li>
                         <li class="list-logout">
-                            <a href="">登录</a>
+                            <a href="../pages/login.html">登录</a>
                             <i class="gap">|</i>
-                            <a href="">注册</a>
+                            <a href="../pages/logon.html">注册</a>
                         </li>
                         <li class="list-logoin">
                             "Hi,"
@@ -1257,7 +1257,54 @@
                                     </a>
                                 </div>
                             </div>
+                            <div class="login-wrap">
+                                <div class="user-headimg">
+                                    <img src="../images/indeximg/3.png" alt="">
+                                </div>
+                                <div class="user-title">Hi，您好</div>
+                                <div class="user-desc">
+                                    <span class="level-icon">
+                                        <img src="../images/indeximg/1.jpg" alt="">
+                                    </span>
+                                    <a href=""></a>
+                                </div>
+                                <ul class="user-message">
+                                    <li>
+                                        <div class="message-number">
+                                            <strong class="integral">
+                                                <a href="">0</a>
+                                            </strong>
+                                        </div>
+                                        <div class="message-name">
+                                            <span>乐豆</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="message-number">
+                                            <strong class="integral">
+                                                <a href="">0</a>
+                                            </strong>
+                                        </div>
+                                        <div class="message-name">
+                                            <span>优惠卷</span>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="message-number">
+                                            <strong class="integral">
+                                                <a href="">0</a>
+                                            </strong>
+                                        </div>
+                                        <div class="message-name">
+                                            <span>成长值</span>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
+
+
+
                         <div class="news-box">
                             <div class="clearfix news-header">
                                 <span class="more">
