--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -13,6 +13,7 @@
     
     <script src="../lib/jquery/dist/jquery.min.js"></script>
     <script src="../js/login.js"></script>
+    <script src="../lib/layer/layer.js"></script>
     <div class="le-top">
         <div class="le-top-box">
             <a href="" id="logo_url">
@@ -57,12 +58,12 @@
                             <ul class="regi-ul regi-login-ul">
                                 <li class="regi-form-input">
                                     <i class="iconfont  icon-ren"></i>
-                                    <input type="text" classname="username" class="login-input login-input-left" placeholder="邮箱/手机号" autocomplete="off">
+                                    <input type="text"  class="login-input login-input-left username" placeholder="邮箱/手机号" autocomplete="off">
                                     <i class="regi-ewm"></i>
                                 </li>
                                 <li class="regi-form-input">
                                     <i class="iconfont  icon-mima"></i>
-                                    <input type="paddword" classname="password" class="login-input login-input-left" placeholder="密码" autocomplete="off">
+                                    <input type="password"  class="login-input login-input-left password" placeholder="密码" autocomplete="off">
                                 
                                 </li>
                             </ul>
@@ -80,7 +81,7 @@
                             </span>
                         </li>
                         <li>
-                            <a href=""id="login-btn" class="regi-btn">登&nbsp;&nbsp;&nbsp;&nbsp;录</a>
+                            <a href="javascript:void(0)"id="login-btn" class="regi-btn">登&nbsp;&nbsp;&nbsp;&nbsp;录</a>
                         </li>
                     </ul>
                 </div>
