--- a/src/pages/cart.html
+++ b/src/pages/cart.html
@@ -137,27 +137,27 @@
             </ul>
         </div>
     </div>
-
-    <div class="gw">
-         <div class="gw-logo">
-            <div class="logo-wrap">
-                <img src="../images/indeximg/6.jfif" alt="" class="cart-img mr50">
-                <div class="cart-login">
-                    <span class="cart-text">
-                        你的购物车还是空的!
-                        <br>
-                        <a href="../pages/login.html">
-                            <span class="cart-blue">登录</span>
-                        </a>
-                        赶紧行动吧
-                    </span>
-                    <a href="../pages/detali.html">
-                        <span class="show-now">马上去购物</span>
+    <div class="gw-logo">
+        <div class="logo-wrap">
+            <img src="../images/indeximg/6.jfif" alt="" class="cart-img mr50">
+            <div class="cart-login">
+                <span class="cart-text">
+                    你的购物车还是空的!
+                    <br>
+                    <a href="../pages/login.html">
+                        <span class="cart-blue">登录</span>
                     </a>
-                </div>
+                    赶紧行动吧
+                </span>
+                <a href="../pages/detali.html">
+                    <span class="show-now">马上去购物</span>
+                </a>
             </div>
-        </div> 
-         <!-- <div class="cart"> -->
+        </div>
+    </div> 
+    <div class="gw">
+         
+          <div class="cart">  
            <!-- <div class="top">
                 <input type="checkbox">
                 全选
@@ -194,8 +194,8 @@
                 <p>总价：<span>1000.00</span></p>
                 <button class="pay">去支付</button>
                 <button class="clear">清空购物车</button>
-            </div>  -->
-        <!-- </div> -->
+            </div> --> 
+         </div> 
     </div>
 
 
